--- a/pages/lngHqMysList/index.wxml
+++ b/pages/lngHqMysList/index.wxml
@@ -1,61 +1,34 @@
 <view class="mysListWrap">
-	<view class="mysListItem clearfix">
-		<view class="imgView"></view>
-		<view class="mysListCon">
-			<view class="mysTit ellip">我的贸易商名称就叫贸易商</view>
-			<view class="mysName">
-				<view class="mysNameItem">
-					<i class="iconfont icon-xingming"></i>
-					<text>耿女士</text>
-				</view>
-				<view class="mysNameItem">
-					<i class="iconfont icon-shouji"></i>
-					<text>18790958171 </text>
+	<block wx:if="{{isHasDataFlag}}">
+		<view class="mysListItem clearfix"
+			wx:for="{{mysList}}"
+			wx:key="*this"
+		>
+			<view class="imgView">
+				<image src="{{item.userPortrait}}"></image>
+			</view>
+			<view class="mysListCon">
+				<view class="mysTit ellip">{{item.cpyName}}</view>
+				<view class="mysName">
+					<view class="mysNameItem">
+						<i class="iconfont icon-xingming"></i>
+						<text>{{item.lxName}}</text>
+					</view>
+					<view class="mysNameItem">
+						<i class="iconfont icon-shouji"></i>
+						<text>{{item.lxTel}}</text>
+					</view>
 				</view>
 			</view>
-		</view>
-		<view class="telWrap" bindtap="callMys">
-			<i class="iconfont icon-tel"></i>
-		</view>
-	</view>
-	
-	<view class="mysListItem clearfix">
-		<view class="imgView"></view>
-		<view class="mysListCon">
-			<view class="mysTit ellip">我的贸易商名称就我的贸易商名称就叫贸易我的贸易商名称就叫贸易叫贸易商</view>
-			<view class="mysName">
-				<view class="mysNameItem">
-					<i class="iconfont icon-xingming"></i>
-					<text>耿女士</text>
-				</view>
-				<view class="mysNameItem">
-					<i class="iconfont icon-shouji"></i>
-					<text>18790958171 </text>
-				</view>
+			<view class="telWrap" bindtap="callMys" data-tel="{{item.lxTel}}">
+				<i class="iconfont icon-tel"></i>
 			</view>
 		</view>
-		<view class="telWrap" bindtap="callMys">
-			<i class="iconfont icon-tel"></i>
+	</block>
+	<block wx:else>
+		<view class="noDataList">
+			<image mode="widthFix" src="../../images/noData.png"></image>
+			<view class="noDataTxt">暂无记录</view>
 		</view>
-	</view>
-	
-	<view class="mysListItem clearfix">
-		<view class="imgView"></view>
-		<view class="mysListCon">
-			<view class="mysTit ellip">我的贸易商名称就叫贸易商</view>
-			<view class="mysName">
-				<view class="mysNameItem">
-					<i class="iconfont icon-xingming"></i>
-					<text>耿女士</text>
-				</view>
-				<view class="mysNameItem">
-					<i class="iconfont icon-shouji"></i>
-					<text>18790958171 </text>
-				</view>
-			</view>
-		</view>
-		<view class="telWrap" bindtap="callMys">
-			<i class="iconfont icon-tel"></i>
-		</view>
-	</view>
+	</block>
 </view>
