--- a/pages/lngHqYzbg/index.wxml
+++ b/pages/lngHqYzbg/index.wxml
@@ -1,8 +1,16 @@
-<view class="yzBgImgWrap padd">
-	<view class="yzbgImgItem"
-		wx:for="{{yzbgImg}}"
-		wx:key="*this"
-	>
-		<image src="{{item}}"></image>
+<block wx:if="{{isHasDataFlag}}">
+	<view class="yzBgImgWrap padd">
+		<view class="yzbgImgItem"
+			wx:for="{{yzbgImg}}"
+			wx:key="*this"
+		>
+			<image src="{{item}}" bindtap="viewBigImg" data-img="{{item}}"></image>
+		</view>
 	</view>
-</view>
+</block>
+<block wx:else>
+	<view class="noDataList">
+		<image mode="widthFix" src="../../images/noData.png"></image>
+		<view class="noDataTxt">暂无记录</view>
+	</view>
+</block>
