--- a/pages/pubRqTrade/index.wxss
+++ b/pages/pubRqTrade/index.wxss
@@ -1,3 +1,9 @@
+page{
+	background: #efefef;
+}
+.pubForm{
+	background: #fff;
+}
 .pubModTit{
 	height: 80rpx;
 	line-height: 80rpx;
@@ -66,4 +72,39 @@
 	display: inline-block;
 	width: 380rpx;
 	margin-right: 15rpx;
+}
+.sureBtn{
+	width: 100% !important;
+	height: 90rpx;
+	line-height: 90rpx;
+	background: #3c7de9;
+	color: #fff;
+	text-align: center;
+	font-size: 31rpx;
+	padding: 0;
+	border-radius:0 !important;
+	margin-top: 20rpx;
+	font-weight: normal;
+}
+.pubItem_spec{
+	background: #fff;
+	padding-bottom: 20rpx;
+}
+.pubItem_spec .pubTit{
+	width: 100%;
+	height: 90rpx;
+	line-height: 90rpx;
+}
+.uploadBdImg{
+	width: 180rpx;
+	height: 180rpx;
+	line-height: 180rpx;
+	border:1rpx dashed #e8e8e8;
+	border-radius: 6rpx;
+	float: left;
+	text-align: center;
+}
+.uploadBdImg i{
+	font-size: 70rpx;
+	color: #e8e8e8;
 }
