--- a/pages/lngHq/index.wxml
+++ b/pages/lngHq/index.wxml
@@ -27,7 +27,7 @@
 	<block wx:if="{{priceList.length > 0}}">
 		<view class="listItem clearfix"
 			wx:for="{{priceList}}"
-			wx:key="*this"
+			wx:key="index"
 			data-id="{{item.gfId}}"
 			bindtap="goGfDet"
 		>
@@ -60,15 +60,17 @@
 	<image mode="widthFix" src="../../images/noData.png"></image>
 	<view class="noDataTxt">暂无记录</view>
 </view>
-<view class="loadingIcon">
-	<block wx:if="{{loading}}">
-		<image src="../../images/loading-bars.svg" mode="widthFix"></image>
-	</block>
-	<block wx:else>
-		<view class="noDataTxt">
-			<text>——————</text>
-			<text>我是有底线的~</text>
-			<text>——————</text>
-		</view>
-	</block>
-</view> 
+<block wx:if="{{isHasDataFlag}}">
+	<view class="loadingIcon">
+		<block wx:if="{{loading}}">
+			<image src="../../images/loading-bars.svg" mode="widthFix"></image>
+		</block>
+		<block wx:else>
+			<view class="noDataTxt">
+				<text>——————</text>
+				<text>我是有底线的~</text>
+				<text>——————</text>
+			</view>
+		</block>
+	</view> 
+</block>
