--- a/pages/lngHq/filter.wxml
+++ b/pages/lngHq/filter.wxml
@@ -21,12 +21,13 @@
 	<view class="filterMod padd">
 		<view class="modTit otherCol">液质选择<text class="subTxt">(多选)</text></view>
 		<view class="areaList clearfix">
-			<view class="areaItem">管道也</view>
-			<view class="areaItem">北京市</view>
-			<view class="areaItem">湖北省</view>
-			<view class="areaItem">河南省</view>
-			<view class="areaItem">内蒙古自治区</view>
-			<view class="areaItem">新疆为伍二组自治区</view>
+			<view class="areaItem"
+				wx:for="{{lqNameData}}"
+				wx:key="index"
+				class="areaItem {{item.state==1 ? 'active':''}}"
+				data-index="{{index}}"
+				bindtap="selectLqType"
+			>{{item.name}}</view>
 		</view>
 	</view>
 	<view class="filterBtnWrap">
