--- a/pages/pubRqTrade/index.wxss
+++ b/pages/pubRqTrade/index.wxss
@@ -14,8 +14,30 @@ page{
 .pubModTit view{
 	float: left;
 }
+.uploadMainImg{
+	width: 100%;
+	height: 400rpx;
+	float: left;
+	border:1rpx solid #E8E8E8;
+	position:relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.uploadMainImg i{
+	font-size: 100rpx;	
+	color: #e8e8e8;
+}
+.mainHeadImg{
+	width: 100%;
+	height: 400rpx;
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 2;
+}
 .subTxt{
-	font-size: 22rpx;
+	font-size: 22rpx; 
 	color:#a9a9a9 ;
 	font-weight: 620;
 	margin-left: 10rpx;
@@ -31,6 +53,14 @@ page{
 	height: 90rpx;
 	line-height: 90rpx;
 	border-bottom: 1rpx solid #e8e8e8;
+}
+.pubItem.hasQfTit{
+	border-bottom: none;
+}
+.pubItem.qfInfo input{
+	width: 97%;
+	text-align: left;
+	padding-left:3%;
 }
 .pubTit{
 	width: 220rpx;
@@ -86,16 +116,21 @@ page{
 	margin-top: 20rpx;
 	font-weight: normal;
 }
-.pubItem_spec{
+.pubItem_spec,
+.pubItem_spec_1{
 	background: #fff;
 	padding-bottom: 20rpx;
 }
-.pubItem_spec .pubTit{
+.pubItem_spec .pubTit,
+.pubItem_spec_1 .pubTit{
 	width: 100%;
 	height: 90rpx;
 	line-height: 90rpx;
 }
-.uploadBdImg{
+.pubItem_spec_1 .pubTit{
+	text-align: center;
+}
+.uploadImg{
 	width: 180rpx;
 	height: 180rpx;
 	line-height: 180rpx;
@@ -104,7 +139,35 @@ page{
 	float: left;
 	text-align: center;
 }
-.uploadBdImg i{
+.uploadImg i{
 	font-size: 70rpx;
 	color: #e8e8e8;
+}
+.upImgItem{
+	height: 180rpx;
+	margin-right: 72rpx;
+	float: left;
+}
+.pubItem_spec_1{
+	float: left;
+	margin-right: 70rpx;
+}
+.upImgItem:last-child,
+.pubItem_spec_1:last-child{
+	margin-right: 0rpx;
+}
+.remark{
+	width: 100%;
+	height: 200rpx;
+	marign-top:90rpx;
+	float: left;
+}
+.remark textarea{
+	width: 96%;
+	height: 96%;
+	border-radius: 6rpx;
+	border:1rpx solid #e8e8e8;
+	font-size: 28rpx;
+	color: #121212;
+	padding: 2%;
 }
