--- a/pages/rqDev/rqDevDet.wxml
+++ b/pages/rqDev/rqDevDet.wxml
@@ -35,6 +35,45 @@
 	</view>
 	<view class="basicInfoItem">
 		<text>品牌名称</text>
-		<text>亚和制氮机</text>
+		<text>亚和制氮机</text> 
 	</view>
+	<view class="basicInfoItem">
+		<text>储罐容积</text>
+		<text>120m³</text> 
+	</view>
+	<view class="basicInfoItem">
+		<text>储罐类型</text>
+		<text>化工储罐</text> 
+	</view>
+</view>
+<!-- 产品详情图 -->
+<view class="proDetImg padd">
+	<view class="proTit">
+		<view class="lineView"></view>
+		<view>产品详情图</view>
+	</view>
+	<view class="detImgWrap">
+		<!-- <image mode="widthFix"></image> -->
+	</view>
+</view>
+<view class="botFun">
+	<view class="focusView">
+		<view class="iconView">
+			<i class="iconfont icon-guanzhu"></i>
+			<!-- <i class="iconfont icon-guanzhu1"></i> -->
+		</view>
+		<view class="iconTxt">关注</view>
+	</view>
+	<!-- <view class="focusView">
+		<view class="iconView">
+			<i class="iconfont icon-wodexiaoxi"></i>
+		</view>
+		<view class="iconTxt">咨询</view>
+	</view> -->
+	<block wx:if="{{true}}">
+		<view class="buyGasBtn">电话咨询</view>
+	</block>
+	<!-- <block wx:else>
+		<view class="notBuyGasBtn">我要买气</view>
+	</block> -->
 </view>
