--- a/pages/rqDev/rqDevDet.wxss
+++ b/pages/rqDev/rqDevDet.wxss
@@ -1,5 +1,6 @@
 page{
 	background: #efefef;
+	margin-bottom: 102rpx;
 }
 .mainHeadImg{
 	width: 100%;
@@ -100,7 +101,7 @@ page{
 }
 .proBasicInfo{
 	background: #fff;
-	margin-top: 20rpx;
+	margin:20rpx 0;
 }
 .proTit{
 	position: relative;
@@ -130,4 +131,68 @@ page{
 .basicInfoItem text:first-child{
 	color: #606060;
 	margin-right: 15rpx;
+}
+.proDetImg{
+	background: #fff;
+}
+.detImgWrap image{
+	width: 100%;
+}
+.botFun{
+	width: 100%;
+	height: 100rpx;
+	background: #fff;
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	z-index: 100;
+}
+.botFun .focusView{
+	width: 120rpx;
+	float: left;
+	margin-left: 30rpx;
+	text-align: center;
+}
+.botFun .focusView:last-child{
+	margin-left: 0;
+}
+.botFun .focusView view{
+	height: 50rpx;
+	line-height: 50rpx;
+}
+.botFun .focusView view i.icon-guanzhu,
+.botFun .focusView view i.icon-wodexiaoxi{
+	font-size: 34rpx;
+	color:#606060 ;
+}
+.botFun .focusView view i.icon-guanzhu1{
+	font-size: 38rpx;
+	color: #d32f2f;
+}
+.botFun .focusView view.iconTxt{
+	color:#606060 ;
+	font-size: 28rpx;
+	margin-top: -10rpx;
+}
+.botFun .focusView view:first-child{
+	margin-top: 10rpx;
+}
+.buyGasBtn,
+.notBuyGasBtn{
+	width: 240rpx;
+	height: 66rpx;
+	line-height: 66rpx;
+	color: #fff;
+	font-size: 28rpx;
+	text-align: center;
+	float: right;
+	margin-right: 30rpx;
+	margin-top: 18rpx;
+	border-radius: 100rpx;
+}
+.buyGasBtn{
+	background:#ffc107 ;
+}
+.notBuyGasBtn{
+	background: #a9a9a9;
 }
